fix the build warning issue, Change the integration test case on query-service side
