# todo-list/query-service/src/main/java/com/networknt/query/PathHandlerProvider.java
@@ -1,5 +1,6 @@
 package com.networknt.query;
 
+import com.networknt.query.handler.TodosCreateEventHandler;
 import com.networknt.query.handler.TodosGetHandler;
 import com.networknt.query.handler.TodosIdGetHandler;
 import com.networknt.server.HandlerProvider;
@@ -12,6 +13,7 @@ public class PathHandlerProvider implements HandlerProvider {
     public HttpHandler getHandler() {
         HttpHandler handler = Handlers.routing()
             .add(Methods.GET, "/v1/todos", new TodosGetHandler())
+            .add(Methods.GET, "/v1/todoEvents", new TodosCreateEventHandler())
             .add(Methods.GET, "/v1/todos/{id}", new TodosIdGetHandler())
         ;
         return handler;
